--- a/catalog/view/theme/yaltahome/css/style.css
+++ b/catalog/view/theme/yaltahome/css/style.css
@@ -1136,7 +1136,12 @@ body {
     overflow: hidden; }
     .main-objects .objects-list li,
     .main-objects .objects-list-block li {
-      overflow: hidden; }
+      overflow: hidden;
+      font-family: "Philosopher";
+font-size: 12px;
+font-weight: 700;
+line-height: 18px;
+color: #000;}
       .main-objects .objects-list li .object-box,
       .main-objects .objects-list-block li .object-box {
         position: relative;
@@ -1915,4 +1920,34 @@ html[xmlns*=""] body:last-child .urgent-redemption {
   position: relative;
   top: 1px;
   margin-left: 5px;
+}
+
+.main-objects h1,
+.main-objects h2,
+.main-objects h3 {
+  font-family: "Philosopher";
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 28px;
+  color: #0c434d;
+  padding-bottom: 10px;
+}
+
+.main-apartment .slider-block .slick-slide .label-object {
+  position: absolute;
+  width: auto;
+  right: 0;
+  top: 30px;
+}
+
+.main-objects .main-objects-title {
+  display: block;
+}
+
+.main .bread-crumbs {
+    font-family: "Philosopher";
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 18px;
+    color: #000;
 }
